# dinio

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  friend.def  importdata2.txt  server.def
conf/: dinio.conf
dinio/: main.c
dinio.xcodeproj/: project.pbxproj
dinio.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
dinio.xcodeproj/xcuserdata/val00048.xcuserdatad/xcschemes/: xcschememanagement.plist
doc/: dinio.html  dstyle.css
src/: config.c  connect.c  consistent_hash.c  consistent_hash.h  dataio.c  dinio.h  dinio_cmd.c  dinio_server.c  dispatch.c  ds_check.c  ds_server.c  ds_server.h  friend.c  informed.c  lock_server.c  main.c  memc_gateway.c  redistribution.c  replication.c  server_cmd.c
test/: Makefile_chash_test.mac  Makefile_io_test.linux  Makefile_io_test.mac  chash_test.c  io_test.c
